# data-agent

./: .env.example  .gitignore  README.md  pyproject.toml
config/domains/: aerospace_review.json  generic_document_review.json
data/review_templates/: GNC_AC.json  GNC_AD.json  GNC_ALL.json
data_agent/: __init__.py  main.py
data_agent/agents/: compliance_agent.py  package_workflow.py
data_agent/agno_structured/: README.md  __init__.py  level_adapter.py  provider_capability_probe.py  schemas.py  validation.py
data_agent/api/: access_control.py  auth.py  evaluation_router.py  evaluation_schemas.py  gnc_review_router.py  openapi.py  openapi_meta.py  parsing_router.py  parsing_schemas.py  planning_router.py  planning_schemas.py  review_plus_router.py  review_workbench_router.py  schemas.py  structuring_router.py  structuring_schemas.py  super_agent_router.py  task_router.py
data_agent/core/: adaptive_router.py  agent_debug_log.py  agent_profile.py  agno_logging.py  committee_planner.py  config.py  contracts.py  domain_registry.py  generic_harness_runner.py  harness_specialist_adapter.py  llm_profiles.py  models.py  startup_checks.py  sub_agent_runner.py  task_board.py  task_board_store.py  task_queue.py  task_scheduler.py  task_spec.py
data_agent/domain/: material_roles.py  review_rule_schema.py  (+1 more)
docs/: 部署与配置说明.md
scripts/: deploy.sh  dev.sh  prod.sh
web/: .env.example  .gitignore  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.mjs  vitest.config.ts
提交材料/: API接口说明.md  README.md  技术报告-正式版.md  测试与日志说明.md  部署与运行说明.md
(+474 files in other folders)
