[project]
name = "data-agent"
version = "0.1.0"
description = "Data Agent - engineering document parsing, orchestration, and review integrations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=2.5.10",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
tdms = [
    "nptdms>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
